# RealSenseID-REST

./: .env.example  .gitignore  README.md  pyproject.toml
rsid_rest/core/settings/: base.py  production.py
rsid_rest/frontend/: demo.py  info_manager.py  settings_dialog.py  users_manager.py
rsid_rest/rsid_lib/: host_db_base.py  host_db_local_file.py  models.py  rsid_api_wrapper.py
scripts/tasks/: model_generator.py
